<resources>
    <string name="app_name">KitaCmu</string>
    <string name="menu_icon_description">Menu icon</string>
    <string name="ic_search_description">Search icon</string>
    <string name="banner_ads_description">Your banner ad description here</string>
    <string name= "job_count">50+</string>"
    <string name="job_subtitle">Jobs</string>
    <string name="job_list_description">Your job list description here</string>
    <string name="bottom_navigation_description">Your bottom navigation description here</string>
    <string name="ads_description">Your ads description here</string>

</resources>